{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 21,
  "lineage": "0ff55b48-b33d-81a9-17cb-26f1555b4219",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053103263608:vpc/vpc-aa1268c2",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-3565375d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-72f0a21a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-aa1268c2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-902f18f8",
            "owner_id": "053103263608",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053103263608:security-group/sg-0359e7357c8156393",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0359e7357c8156393",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01202e37b279d9b03"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "bookstore-cluster-instance",
            "name_prefix": null,
            "owner_id": "053103263608",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bookstore Cluster Instance SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-aa1268c2"
          },
          "depends_on": [
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053103263608:security-group/sg-01202e37b279d9b03",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01202e37b279d9b03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bookstore-load-balancer",
            "name_prefix": null,
            "owner_id": "053103263608",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bookstore Load Balancer SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-aa1268c2"
          }
        }
      ]
    }
  ]
}